# mix-blink

./: README.md  pyproject.toml  train_hard.sh  train_inbatch.sh  train_stage.sh
configs/: config.yaml  config_bm25.yaml  config_dense.yaml  config_hard.yaml  config_inbatch.yaml
mix_blink/: __init__.py  argparser.py  config.py  model.py  utils.py
mix_blink/cli/: build_index.py  eval.py  get_candidates.py  run.py  train.py
mix_blink/data/: __init__.py  collator.py  dataset.py  dictionary.py
mix_blink/evaluation/: eval.py
mix_blink/modeling/: __init__.py  encoder.py  model_output.py
mix_blink/prediction/: predict.py
mix_blink/retriever/: __init__.py  bm25.py  dense.py  stopwords.py
mix_blink/training/: __init__.py  trainer.py
scripts/: zelda.py
tests/: test_collator.py  test_dataset.py  test_dictionary.py  test_encoder.py  test_model.py  test_retriever.py  test_trainer.py
tests/test_data/: dataset_toy.jsonl
