[project]
name = "mix-blink"
version = "0.1.0"
description = "A library for mixed bi-encoding entity linking models"
readme = "README.md"
authors = [{ name = "Yuya Sawada", email = "sawada.yuya.sr7@naist.ac.jp" }]
requires-python = ">=3.12"
dependencies = [
    "bm25s[full]>=0.2.12",
    "datasets>=3.5.0",
    "faiss-cpu>=1.11.0",
    "sentencepiece>=0.2.0",
    "sudachidict-core>=20250515",
    "sudachipy>=0.6.10",
    "torch>=2.7.0",
    "transformers[torch]>=4.51.3",
    "wandb>=0.19.10",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[project.scripts]
get_candidate = "mix_blink.cli.get_candidates:main"
build_index = "mix_blink.cli.build_index:main"
blink_train = "mix_blink.cli.train:main"
blink_eval = "mix_blink.cli.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mix_blink"]
